--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -284,7 +284,7 @@ gg_andel_utrikes$utrikes_fodda_andel_Dalarna
 
 Ett viktigt steg för att integreras i ett samhälle är naturligtvis att lära sig språket. Att ha grundläggande kunskaper i det officiella språket är viktigt för att kunna delta i samhället, både socialt och ekonomiskt. För att underlätta integrationen av nyanlända har Sverige ett system för svenskundervisning för invandrare, hädanefter SFI. SFI är en utbildning som erbjuds till personer som är bosatta i Sverige och saknar sådana grundläggande kunskaper i svenska språket som utbildningen syftar till att ge. Från andra kalenderhalvåret det år hen fyller 16 år har personen rätt till SFI ([Skolverket](https://www.skolverket.se/regler-och-ansvar/ansvar-i-skolfragor/ratt-till-sfi){target="_blank"}).
 
-Hur lång tid det tar att slutföra SFI, från när personen invandrade till Sverige (vistelsetid), påverkas av vilken utbildningsnivå personen har. Kvinnor med förgymnasial utbildning som blev godkända i SFI år `r sfi_max_ar` hade varit i Sverige i `r sfi_kvinnor_forgymnasial` dagar (medianvärde), att jämföra med `r sfi_kvinnor_gymnasial` dagar för kvinnor med gymnasial utbildning. För kvinnor med högst utbildning (eftergymnasial) tog det `r sfi_kvinnor_eftergymnasial` dagar, vilket alltså är något längre tid än för de med gymnasial utbildning.
+Hur lång tid det tar att slutföra SFI, från när personen invandrade till Sverige (vistelsetid), påverkas av vilken utbildningsnivå den invandrade har. Kvinnor med förgymnasial utbildning som blev godkända i SFI år `r sfi_max_ar` hade varit i Sverige i `r sfi_kvinnor_forgymnasial` dagar (medianvärde), att jämföra med `r sfi_kvinnor_gymnasial` dagar för kvinnor med gymnasial utbildning. För kvinnor med högst utbildning (eftergymnasial) tog det `r sfi_kvinnor_eftergymnasial` dagar, vilket alltså är något längre tid än för de med gymnasial utbildning.
 
 Män med förgymnasial utbildning som blev godkända i SFI under år `r sfi_max_ar` hade varit i Sverige betydligt kortare tid än kvinnorna med motsvarande utbildning, `r sfi_man_forgymnasial` dagar (medianvärde). Till skillnad från kvinnorna hade dock de män med gymnasial utbildning som blivit godkända under år `r sfi_max_ar` varit i Sverige längre tid än motsvarande personer med förgymnasial utbildning, hela `r sfi_man_gymnasial` dagar, vilket även är klart längre än kvinnorna med gymnasial utbildning som blev godkända. De män med längst utbildning (eftergymnasial) hade varit i Sverige i `r sfi_man_eftergymnasial` dagar när de blev godkända i SFI år `r sfi_max_ar`, vilket är något kortare tid än kvinnorna med motsvarande utbildning.
 
