--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -274,14 +274,11 @@ gg_antal_utrikes$befolkningsprognos_lan_Dalarna
 <span class = "kommentar"> Någon kort text som bryggar över till avsnitt 2</span>
 
 # Utbildning och arbetsmarknad
-<span class = "kommentar"> Sammanslagning av språkutbildning, utbildning i stor och arbetsmarknad</span>
+<span class = "kommentar"> Sammanslagning av språkutbildning, utbildning i allmänhet och etablering på arbetsmarknad.</span>
+Ett viktigt steg för att kunna integreras i ett samhälle är naturligtvis att lära sig språket. Språkkunskaper ger förutsättningar för utbildning som i sin tur skapar möjligheter på arbetsmarknaden. I detta avsnitt görs en genomgång av utvecklingen för utrikes födda inom dessa delar.
 
-
-<span class = "kommentar"> Två diagram kopplade till godkända i SFI</span>
-
-## Språk?
-
-Ett viktigt steg för att integreras i ett samhälle är naturligtvis att lära sig språket. Att ha grundläggande kunskaper i det officiella språket är viktigt för att kunna delta i samhället, både socialt och ekonomiskt. För att underlätta integrationen av nyanlända har Sverige ett system för svenskundervisning för invandrare, hädanefter SFI. SFI är en utbildning som erbjuds till personer som är bosatta i Sverige och saknar sådana grundläggande kunskaper i svenska språket som utbildningen syftar till att ge. Från andra kalenderhalvåret det år hen fyller 16 år har personen rätt till SFI ([Skolverket](https://www.skolverket.se/regler-och-ansvar/ansvar-i-skolfragor/ratt-till-sfi){target="_blank"}).
+## Språk
+Att ha grundläggande kunskaper i det officiella språket är viktigt för att kunna delta i samhället, både socialt,  ekonomiskt och kulturellt. För att underlätta integrationen av nyanlända har Sverige ett system för svenskundervisning för invandrare, hädanefter SFI. SFI är en utbildning som erbjuds till personer som är bosatta i Sverige och saknar sådana grundläggande kunskaper i svenska språket som utbildningen syftar till att ge. Från andra kalenderhalvåret det år hen fyller 16 år har personen rätt till SFI ([Skolverket](https://www.skolverket.se/regler-och-ansvar/ansvar-i-skolfragor/ratt-till-sfi){target="_blank"}).
 
 Hur lång tid det tar att slutföra SFI, från när personen invandrade till Sverige (vistelsetid), påverkas av vilken utbildningsnivå den invandrade har. Kvinnor med förgymnasial utbildning som blev godkända i SFI år `r sfi_max_ar` hade varit i Sverige i `r sfi_kvinnor_forgymnasial` dagar (medianvärde), att jämföra med `r sfi_kvinnor_gymnasial` dagar för kvinnor med gymnasial utbildning. För kvinnor med högst utbildning (eftergymnasial) tog det `r sfi_kvinnor_eftergymnasial` dagar, vilket alltså är något längre tid än för de med gymnasial utbildning.
 
@@ -300,12 +297,14 @@ En orsak till att vistelsetiden ökade stadigt för de som blev godkända från 
 gg_SFI$sfi_vistelsetid_tidsserie_Dalarna
 ```
 
+Från 1 januari 2025 har kraven på att delta i SFI skärpts. Deltagande är bl a begränsat till tre år och en individuell studieplan ska upprättas i samband med antagning. Om genomströmningstiderna som rådde under 2023 inte förkortas skulle det kunna innebära att många elever inte skulle nå godkänt inom utsatt tid. Särskilt utmanande är tidsfristen för gruppen med förgymnasial utbildning som under perioden 2021-2023 i genomsnitt tog nästan dubbelt så lång tid på sig som de nya reglerna kräver.
+
 ## Utbildning?
 
 <span class = "kommentar"> Flytta figurer kopplade till utbildning hit? Just nu ligger många av dessa efter arbetsmarknadsavsnittet</span>
 
 
-## Arbetsmarknad och sysselsättning?
+## Arbetsmarknad och sysselsättning
 
 En viktig aspekt för integrationen är hur stark arbetsmarknaden är vid tidpunkten för invandringen. När
 Sverige under 1990-talet tog emot ett stort antal asylsökande från Balkan hade vi den djupaste ekonomiska
